<resources>
    <string name="app_name">WorldCinema</string>
    <string name="passw">Пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="repeatpass">Повторите пароль</string>
    <string name="haveakk">У меня уже есть аккаунт</string>
    <string name="name">Имя</string>
    <string name="sname">Фамилия</string>
    <string name="open">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="watch">Смотреть</string>
    <string name="trand">В тренде</string>
    <string name="trends">В тренде</string>
    <string name="foryou">Для вас</string>
    <string name="novoe">new</string>
    <string name="news">Новое</string>
    <string name="youw">Вы смотрели</string>
    <string name="altered_carbon">Altered Carbon</string>
    <string name="glav">Главная</string>
    <string name="podb">Подборка</string>
    <string name="collect">Коллекции</string>
    <string name="prof">Профиль</string>
    <string name="fant">Фэнтези</string>
    <string name="pricl">Приключения</string>
    <string name="teleser">Телесериал</string>
    <string name="watch2">Смотреть</string>
    <string name="opis">Описание</string>
    <string name="opistext">Eliot is in his happy place, unaware that he is being possessed by the Monster. To have control over his body, Eliot must travel to the place that contains his greatest regret: turning down Quentin when he suggests he and Eliot should be together after their memories are restored of their life in past-Fillory, happily living together and raising a family.</string>
    <string name="episods">\'Эпизоды</string>
    <string name="epis">Эпизоды</string>
    <string name="magic">Нелегальная магия</string>
    <string name="e1">2015</string>
    <string name="magistok">Источник магии</string>
    <string name="e2">2016</string>
    <string name="text3">Квентин и Джулия приглашены на тест их волшебных навыков...</string>
    <string name="totext">Пирл расследует инцидент в Брейкбиллс и дисциплинарные...</string>
</resources>