<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieScreen"
    android:background="@color/maincolor">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp">


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="412dp"
                android:layout_height="439dp"
                android:src="@drawable/bg_film" />

            <ImageView
                android:layout_width="500dp"
                android:layout_height="439dp"
                android:src="@drawable/shadow2"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/back"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="The Magicians"
                android:textColor="#fff"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="55dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vosemn"
                android:layout_gravity="right"
                android:layout_marginTop="58dp"
                android:layout_marginRight="56dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/chat"
                android:layout_gravity="right"
                android:layout_marginTop="51dp"
                android:layout_marginRight="18dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorbutton"
                android:layout_gravity="bottom"
                android:layout_marginBottom="56dp"
                android:layout_marginLeft="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fant"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"/>

            </FrameLayout>


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorbutton"
                android:layout_gravity="bottom"
                android:layout_marginBottom="56dp"
                android:layout_marginLeft="116dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pricl"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorbutton"
                android:layout_gravity="bottom"
                android:layout_marginBottom="56dp"
                android:layout_marginLeft="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fant"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorbutton"
                android:layout_gravity="bottom"
                android:layout_marginBottom="56dp"
                android:layout_marginLeft="252dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fant"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorbutton"
                android:layout_gravity="bottom"
                android:layout_marginBottom="22dp"
                android:layout_marginLeft="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teleser"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"/>

            </FrameLayout>


        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch2"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"/>


        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="422dp"
                android:layout_height="247dp"
                android:src="@drawable/preview" />

            <ImageView
                android:layout_width="422dp"
                android:layout_height="247dp"
                android:src="@drawable/shadow3"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/play"
                android:layout_gravity="center"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#fff"
                android:text="@string/opis"
                android:layout_marginLeft="16dp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opistext"
                android:textSize="16dp"
                android:textColor="#fff"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#fff"
                android:text="Кадры"
                android:layout_marginLeft="16dp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="175dp"
                        android:layout_height="125dp"
                        android:src="@drawable/slide1"
                        android:layout_marginRight="16dp"/>

                    <ImageView
                        android:layout_width="175dp"
                        android:layout_height="125dp"
                        android:src="@drawable/slide2" />

                    <ImageView
                        android:layout_width="175dp"
                        android:layout_height="125dp"
                        android:src="@drawable/slide3" />

                </LinearLayout>

            </HorizontalScrollView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#fff"
                android:text="@string/epis"
                android:layout_marginLeft="16dp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="175dp"
                    android:layout_height="125dp"
                    android:src="@drawable/ep1"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magic"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:layout_marginLeft="205dp"
                    android:layout_marginTop="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text3"
                    android:textColor="#AFAFAF"
                    android:textSize="12sp"
                    android:layout_marginLeft="205dp"
                    android:layout_marginTop="48dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e1"
                    android:textColor="#AFAFAF"
                    android:textSize="12sp"
                    android:layout_marginLeft="205dp"
                    android:layout_marginTop="90dp"/>

        </FrameLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="175dp"
                android:layout_height="125dp"
                android:src="@drawable/ep2"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magistok"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginLeft="205dp"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totext"
                android:textColor="#AFAFAF"
                android:textSize="12sp"
                android:layout_marginLeft="205dp"
                android:layout_marginTop="48dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e2"
                android:textColor="#AFAFAF"
                android:textSize="12sp"
                android:layout_marginLeft="205dp"
                android:layout_marginTop="90dp"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>