<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen"
    android:background="@color/maincolor">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="440dp"
                android:src="@drawable/bg_img" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/mag"
                android:layout_marginTop="88dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:src="@drawable/shadow" />

            <FrameLayout
                android:layout_width="144dp"
                android:layout_height="44dp"
                android:background="@drawable/colorbutton"
                android:layout_marginLeft="130dp"
                android:layout_marginRight="130dp"
                android:layout_marginTop="320dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watch"
                    android:textColor="#fff"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>

            </FrameLayout>

</RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trends"
            android:textSize="17sp"
            android:textColor="#EF3A01"
            android:textStyle="bold"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="5dp"/>

            <TextView
                android:id="@id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textColor="#EF3A01"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foryou"
                android:textSize="17sp"
                android:textColor="#EF3A01"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="216dp"
                    android:src="@drawable/limg"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="216dp"
                    android:src="@drawable/gimg"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="216dp"
                    android:src="@drawable/simg"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="216dp"
                    android:src="@drawable/llimg"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="216dp"
                    android:src="@drawable/ggimg"/>

            </LinearLayout>

        </HorizontalScrollView>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/youw"
            android:layout_marginLeft="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#EF3A01"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/alc"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pol"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="14dp"
            android:text="@string/altered_carbon"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="200dp"/>


    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>

</ScrollView>